create oficial when was create user app

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,11 @@
     <input name="password" id="password" type="password" required>
     |
     <label for="role">role: </label>
-    <input name="role" id="role" type="text" required>
+    <select name="role" id="role">
+        <option value="0">Oficial</option>
+        <option value="1">Vet</option>
+        <option value="2">Owner</option>
+    </select>
 
     <input type="submit">
 </form>
