Subiendo la cookie

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,5 +25,17 @@
     <input type="submit">
 </form>
 
+<form action="api/userApp" method="post">
+    <label for="name2">name: </label>
+    <input name="name2" id="name2" type="text" required>
+
+    <label for="address">Address: </label>
+    <input name="address" id="address" type="text" required>
+
+    <label for="neight">Neight: </label>
+    <input name="neight" id="neight" type="text" required>
+    <input type="submit">
+</form>
+
 </body>
 </html>
