Poniendo la autorizacion

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,7 @@
         <option value="vet">Vet</option>
         <option value="owner">Owner</option>
     </select>
-    <input type="button" id="send_data" value="Enviar" onclick="sendData()">
+    <input type="button" id="send_data" value="Enviar" onclick="sendDataOwner()">
 </form>
 
 <script TYPE="text/javascript" src="Js/SignIn.js"></script>
