--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,36 +1,115 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="Css/index.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+
+    <title>4-legged citizens</title>
 </head>
+
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+   
+    <header>
+      <img class="logo" src="https://i.ibb.co/ckDdYBB/Ciudadados-de-4-Patas.png" alt="logo">
+      <nav>
+        <ul class="nav_links">
+          <li><a href="#" >Sign up</a></li>
+          <li><a href="#">Sign in</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </nav>
+      <a class= "cta" href="contact.html"><button>Contact</button></a>
+    </header>
 
-<form action="api/userApp" id="form_user" method="post">
+    </nav>
+    <h1>Welcome to the world of pets!</h1>
+  
+    <div class="container">
+        <div class="images">
+            <img src="https://i.ibb.co/8jPW8jt/propietario-1.png" alt="" style="width: 100%; text-align: center" id="bton-owner">
+            <h4>Owner</h4>
+        </div>
+        <div class="images">
+            <img src="https://i.ibb.co/3vgRCYh/vet.png" alt="" style="width: 100%; text-align: center" id="bton-vet">
+            <h4>Vet</h4>
+        </div>
+        <div class="images">
+            <img src="https://i.ibb.co/pxDfBgt/funcionario.png" alt="" style="width: 100%; text-align: center" id="bton-official">
+            <h4>Official</h4>
+        </div>
+    </div>
+  
+    <div class="overlay" id="overlay">
+      <div class="popup" id="popup">
+        <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
+        <h3>Owner</h3>
+        <h4> Sign In</h4>
+        <form action="">
+          <div class="contenedor-inputs">
+            <img src="images/user.png" > 
+            <input type="User" placeholder="User Name">
+            <img src="images/candado1.png" > 
+            <input type="Password" placeholder="Password" >
+            <h5>You have not yet registered?</h5>
+            <a href="" class="RegiOFF">Click Here</a>
+          </div>
+          <input type="submit" class="btn-submit" value="Sign In">
+        </div>
+        </form>
+      
+    </div>
+  </div>
 
-    <label for="name">name: </label>
-    <input name="name" id="name" type="text" required>
+  <div class="overlayVet" id="overlayVet">
+    <div class="popupVet" id="popupVet">
+      <a href="#" id="btn-cerrar-popupVet" class="btn-cerrar-popupVet"><i class="fas fa-times"></i></a>
+      <h3>Vet</h3>
+      <h4>Please Fill The information</h4>
+      <form action="">
+        <div class="contenedor-inputs">
+          <img src="images/user.png" > 
+          <input type="text" placeholder="User Name">
+          <img src="images/candado1.png" > 
+            <input type="email" placeholder="Password">
+            <h5>You have not yet registered?</h5>
+            <a href="" class="RegiOFF"> Click Here</a>
+        </div>
+        <input type="submit" class="btn-submit" value="Sign In">
+      </div>
+      </form>
+    
+  </div>
+</div>
 
-    <label for="email">email: </label>
-    <input name="email" id="email" type="text" required>
+<div class="overlayOff" id="overlayOff">
+  <div class="popupOff" id="popupOff">
+    <a href="#" id="btn-cerrar-popupOff" class="btn-cerrar-popupOff"><i class="fas fa-times"></i></a>
+    <h3>Official</h3>
+    <h4>Please Fill The information</h4>
+    <form action="">
+      <div class="contenedor-inputs">
+        <img src="images/user.png" > 
+        <input type="text" placeholder="User Name">
+        <img src="images/candado1.png" > 
+            <input type="email" placeholder="Password">
+            <h5>You have not yet registered?</h5>
+            <a href="" class="RegiOFF" > Click Here </a>
+      </div>
+      <input type="submit" class="btn-submit" value="Sign In">
+    </div>
+    </form>
+</div>
+</div>
 
-    <label for="password">pass: </label>
-    <input name="password" id="password" type="password" required>
-    |
-    <label for="role">role: </label>
-    <select name="role" id="role">
-        <option value="oficial">Oficial</option>
-        <option value="vet">Vet</option>
-        <option value="owner">Owner</option>
-    </select>
-    <input type="button" id="send_data" value="Enviar" onclick="sendDataOwner()">
-</form>
-
-<script TYPE="text/javascript" src="Js/SignIn.js"></script>
-
-
+<script src="Js/popup.js"></script>
 </body>
+
 </html>
