--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,4 +1,4 @@
-<!-- Esto es un comentario
+
 <!doctype html>
 <html lang="en">
 
@@ -113,4 +113,97 @@
 </body>
 
 </html>
+
+
+<!-- Esto es un comentario
+<!doctype html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/owner.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <title>4-legged citizens</title>
+</head>
+
+<body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+
+<header>
+    <img class="logo" src="https://i.ibb.co/ckDdYBB/Ciudadados-de-4-Patas.png" alt="logo">
+    <nav>
+        <ul class="nav_links">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#" id="">Create Pet</a></li>
+            <li><a href="#">Modificate Pet</a></li>
+            <li><a href="#" id="">Your Pets</a></li>
+        </ul>
+    </nav>
+    <a class= "cta" href="contact.html"><button>Contact</button></a>
+</header>
+</nav>
+
+<div class="box">
+    <h2>Create Pet</h2>
+    <form>
+        <div class="inputBox">
+            <input type="number" name="microchip" id="microship" required onkeyup="this.setAttribute('value', this.value);" value="">
+            <label>Microchip</label>
+        </div>
+
+        <div class="inputBox">
+            <input type="text" name="name" id="name" required value=""
+                   onkeyup="this.setAttribute('value', this.value);">
+            <label>Name</label>
+        </div>
+
+        <div class="inputBox">
+            <input type="text" id="specie" name="specie" required onkeyup="this.setAttribute('value', this.value);" value="">
+            <label>Specie</label>
+        </div>
+
+        <div class="inputBox">
+            <input type="text" name="race" id="race" required onkeyup="this.setAttribute('value', this.value);" value="">
+            <label>Race</label>
+        </div>
+
+        <div class="inputBox">
+            <input type="text" name="size" id="size" required onkeyup="this.setAttribute('value', this.value);" value="">
+            <label>Size</label>
+        </div>
+
+        <div class="inputBox">
+            <input type="text" name="sex" id="sex" required onkeyup="this.setAttribute('value', this.value);" value="">
+            <label>Sex</label>
+        </div>
+
+        <div class="inputBox">
+            <input type="text" name="username" id="username" required onkeyup="this.setAttribute('value', this.value);" value="">
+            <label>Owner Username</label>
+        </div>
+
+        <div class="inputBox">
+            <input type="file" name="file" class="file" id="file" required onkeyup="this.setAttribute('value', this.value);" value="">
+
+        </div>
+
+
+        <input type="button" name="sign-in" onclick="updatePet()" value="Create Pet">
+      </form>
+  </div>
+  <script src="Js/SignUp.js"></script>
+  <script src="Js/popup.js"></script>
+
+  </body>
+  </html>
+
+
 -->
+
