ready login of owner

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,13 +65,13 @@
         <form action="">
             <div class="contenedor-inputs">
                 <img src="images/user.png">
-                <input type="User" placeholder="User Name">
+                <input type="User" placeholder="User Name" id="userOwner">
                 <img src="images/candado1.png">
-                <input type="Password" placeholder="Password">
+                <input type="Password" placeholder="Password" id="passOwner">
                 <h5>You have not yet registered?</h5>
                 <a href="" class="RegiOFF">Click Here</a>
             </div>
-            <input type="submit" class="btn-submit" value="Sign In">
+            <input type="button" class="btn-submit" value="Sign In" onclick="verificationLoginOwner()">
     </div>
     </form>
 
@@ -92,7 +92,7 @@
                 <h5>You have not yet registered?</h5>
                 <a href="" class="RegiOFF"> Click Here</a>
             </div>
-            <input type="button" class="btn-submit" value="Sign In" onclick="verificacionLoginVet()">
+            <input type="button" class="btn-submit" value="Sign In" onclick="verificationLoginVet()">
     </div>
     </form>
 
