--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -9,7 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <title>4-legged citizens</title>
@@ -72,9 +72,8 @@
                 <a href="" class="RegiOFF">Click Here</a>
             </div>
             <input type="button" class="btn-submit" value="Sign In" onclick="verificationLoginOwner()">
+        </form>
     </div>
-    </form>
-
 </div>
 </div>
 
@@ -93,9 +92,9 @@
                 <a href="" class="RegiOFF"> Click Here</a>
             </div>
             <input type="button" class="btn-submit" value="Sign In" onclick="verificationLoginVet()">
-    </div>
-    </form>
 
+        </form>
+    </div>
 </div>
 </div>
 
@@ -114,18 +113,16 @@
                 <a href="" class="RegiOFF"> Click Here </a>
             </div>
             <input type="button" class="btn-submit" onclick="verificationLoginOficial()" value="Sign In">
+        </form>
     </div>
-    </form>
 </div>
 </div>
 
 <script src="Js/popup.js"></script>
 <script src="Js/SingIn.js" type="text/javascript"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
-
 
 
 <!-- Esto es un comentario
@@ -172,9 +169,7 @@
         </div>
 
         <div class="inputBox">
-            <input type="text" name="name" id="name" required value=""
-                   onkeyup="this.setAttribute('value', this.value);">
-            <label>Name</label>
+             <label>Name</label>
         </div>
 
         <div class="inputBox">
@@ -219,5 +214,7 @@
 
 
 -->
+<input type="text" name="name" id="name" required value=""
+       onkeyup="this.setAttribute('value', this.value);">
 
 
