Subiendo la imagen al server

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,4 +1,4 @@
-
+<!--
 <!doctype html>
 <html lang="en">
 
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -125,10 +124,10 @@
 </body>
 
 </html>
+-->
 
 
 
-<!-- Esto es un comentario
 <!doctype html>
 <html lang="en">
 
@@ -165,7 +164,7 @@
 
 <div class="box">
     <h2>Create Pet</h2>
-    <form>
+    <form id="file2">
         <div class="inputBox">
             <input type="number" name="microchip" id="microship" required onkeyup="this.setAttribute('value', this.value);" value="">
             <label>Microchip</label>
@@ -207,7 +206,6 @@
 
         </div>
 
-
         <input type="button" name="sign-in" onclick="updatePet()" value="Create Pet">
       </form>
   </div>
@@ -218,6 +216,24 @@
   </html>
 
 
--->
+  <!--
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Multi part</title>
+    </head>
+    <body>
+        <form id="file2" >
+            choose a file<input type="file" id="file"  name="file"/>
+            <input type="button" onclick="uploadPicture()"  value="upload"/>
+
+        </form>
+
+    </body>
+        <script src="Js/SignUp.js"></script>
+
+</html>
+    -->
 
 
