integrated cute interface, whit the perfect backend

--- a/src/main/webapp/ownerPetTable.html
+++ b/src/main/webapp/ownerPetTable.html
@@ -104,7 +104,7 @@
               <label>Sex</label>
             </div>
   
-            <input type="submit" name="sign-in" value="Create Pet">
+            <input type="button" name="sign-in" value="Create Pet">
           </form>
       </div>
     </div>
