Agregando la tabla de pets

--- a/src/main/webapp/ownerPetTable.html
+++ b/src/main/webapp/ownerPetTable.html
@@ -50,25 +50,13 @@
             </tr>
             </thead>
             <tbody id="res">
-                <td></td>
-                <td></td>
-                <td> </td>
-                <td></td>
-                <td></td>
-                <td> </td>
-                <td></td>
-                <td> </td>
-                <td>
-                     <a class= "cta" href="#" id="bton-owner"><button>Update</button></a>
-                </td>
-                <td>
-                    <a class= "cta" href="#" id="bton-vet"><button>Case</button></a>
-                </td>
+
+
             </tbody>
         </table>
     </div>
     
-    <div class="overlay" id="overlay">
+    <div class="overlay" id="overlay" style="visibility: hidden">
         <div class="popup" id="popup">
           <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
           <h3>Update Pet</h3>
@@ -135,7 +123,8 @@
       </div>
     </div>
 
-<script src="Js/formTable.js"></script>
+
+<script src="Js/ownerTable.js"></script>
 
 </body>
 
