--- a/src/main/webapp/ownerPetTable.html
+++ b/src/main/webapp/ownerPetTable.html
@@ -45,23 +45,27 @@
                 <th>Size</th>
                 <th>Sex</th>
                 <th>Picture</th>
-                <th>Update Pet</th>
-                <th>Create case</th>
             </tr>
+
             </thead>
             <tbody id="res">
-
-
             </tbody>
         </table>
+
     </div>
-    
+    <div class="buttons">
+
+    </div>
     <div class="overlay" id="overlay" style="visibility: hidden">
         <div class="popup" id="popup">
           <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
           <h3>Update Pet</h3>
           <form action="" style="max-width:500px;margin:auto">
-            <div class="inputBox">
+              <div class="inputBox">
+                  <input type="number" name="id" required onkeyup="this.setAttribute('value', this.value);" value="">
+                  <label>ID of Pet</label>
+              </div>
+              <div class="inputBox">
               <input type="number" name="microchip" required onkeyup="this.setAttribute('value', this.value);" value="">
               <label>Microchip</label>
             </div>
@@ -125,6 +129,7 @@
 
 
 <script src="Js/ownerTable.js"></script>
+<script src="Js/formTable.js"></script>
 
 </body>
 
