method that makes happy bri

--- a/src/main/webapp/ownerPetTable.html
+++ b/src/main/webapp/ownerPetTable.html
@@ -58,7 +58,7 @@
     </div>
     <div class="overlay" id="overlay" style="visibility: hidden">
         <div class="popup" id="popup">
-          <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
+          <a href="#" id="cerrar" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
           <h3>Update Pet</h3>
           <form action="" style="max-width:500px;margin:auto">
               <div class="inputBox">
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-    <div class="overlayVet" id="overlayVet">
+    <div class="overlayVet" id="overlayVet" style="visibility: hidden">
         <div class="popup" id="popupVet">
           <a href="#" id="btn-cerrar-popupVet" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
           <h3>Create case</h3>
