--- a/src/main/webapp/visitPetVet.html
+++ b/src/main/webapp/visitPetVet.html
@@ -26,7 +26,7 @@
     <nav>
         <ul class="nav_links">
             <li><a href="funtionOwner.html">Home</a></li>
-            <li><a href="createPet.html" id="">Create Pet</a></li>
+            <li><a href="" id="">View visits</a></li>
         </ul>
     </nav>
     <a class="cta1" href="contact.html">
@@ -109,8 +109,7 @@
 <script src="Js/VetCreateVisit.js" type="text/javascript"></script>
 <script>
     document.getElementById("visit").onchange = function () {
-        if (this.value == 'micro') {
-            var optionID = document.getElementById('microchip');
+        if (this.value == 'microchip') {
             document.getElementById("microchi").disabled = false;
         } else
             document.getElementById("microchi").disabled = true;
