frontend vet complete

--- a/src/main/webapp/funtionVet.html
+++ b/src/main/webapp/funtionVet.html
@@ -38,7 +38,7 @@
         </div>
        
         <div class="images">
-            <a href="">
+            <a href="allVisitsVet.html">
             <img src="https://i.ibb.co/R2hpMFc/visit-1.png" alt="" style="width: 100%; text-align: center" id="bton-official">
         </a>
             <h4>All visits</h4>
@@ -46,14 +46,13 @@
         </div>
 
         <div class="images">
-            <a href="">
+            <a href="modificateVet.html">
             <img src="https://i.ibb.co/qJzRhJS/settings.png" alt="" style="width: 100%; text-align: center" id="bton-vet">
         </a>
             <h4>Modificate Vet</h4>
             <h5>Enter to modificate your data</h5>
         </div>
     </div>
-
 </body>
 
 </html>
