--- a/src/main/webapp/visitPetVet.html
+++ b/src/main/webapp/visitPetVet.html
@@ -25,9 +25,9 @@
     <img class="logo" src="https://i.ibb.co/ckDdYBB/Ciudadados-de-4-Patas.png" alt="logo">
     <nav>
         <ul class="nav_links">
-            <li><a href="funtionOwner.html">Home</a></li>
-            <li><a href="" id="">View visits</a></li>
-        </ul>
+            <li><a href="funtionVet.html">Home</a></li>
+            <li><a href="allVisitsVet.html" id="">Your Visits</a></li>
+          </ul>
     </nav>
     <a class="cta1" href="contact.html">
         <button>Contact</button>
@@ -56,8 +56,7 @@
         </tr>
         </thead>
         <tbody id="res">
-
-
+            
         </tbody>
     </table>
 
