--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -66,20 +66,18 @@
         <h4> Sign In</h4>
         <form action="">
 
-          <div class="contenedor-inputs">
-              <i class="fas fa-user icon"></i>
-            <input class="User Input"type="text" id="userOwner" placeholder="User Name" name="USRNAME">
-              <i class="fas fa-lock-open icon"></i>
-            <input class="User Input" type="text" id="passOwner" placeholder="Password" name="PASSWORD">
-            <h5>You have not yet registered?</h5>
-            <a href="owneRegister.html" class="RegiOFF">Click Here</a>
-          </div>
-          <input type="button" onclick="verificationLoginOwner()" class="btn-submit" value="Sign In">
-        </div>
+            <div class="contenedor-inputs">
+                <i class="fas fa-user icon"></i>
+                <input class="User Input" type="text" id="userOwner" placeholder="User Name" name="USRNAME">
+                <i class="fas fa-lock-open icon"></i>
+                <input class="User Input" type="password" id="passOwner" placeholder="Password" name="PASSWORD">
+                <h5>You have not yet registered?</h5>
+                <a href="owneRegister.html" class="RegiOFF">Click Here</a>
+            </div>
+            <input type="button" onclick="verificationLoginOwner()" class="btn-submit" value="Sign In">
         </form>
-    </form>
 
-</div>
+    </div>
 </div>
 
 <div class="overlayVet" id="overlayVet">
@@ -97,10 +95,9 @@
                 <a href="vetRegister.html" class="RegiOFF"> Click Here</a>
             </div>
             <input type="button" class="btn-submit" value="Sign In" onclick="verificationLoginVet()">
-    </div>
-    </form>
 
-</div>
+        </form>
+    </div>
 </div>
 
 <div class="overlayOff" id="overlayOff">
@@ -118,7 +115,6 @@
                 <a href="officialRegister.html" class="RegiOFF"> Click Here </a>
             </div>
             <input type="button" class="btn-submit" value="Sign In" onclick="verificationLoginOficial()">
-    </div>
     </form>
 </div>
 </div>
@@ -153,7 +149,7 @@
 
 <script src="Js/SingIn.js" type="text/javascript"></script>
 <script src="Js/popup.js"></script>
-    <script src="Js/SingIn.js"></script>
+<script src="Js/SingIn.js"></script>
 </body>
 
 </html>
