--- a/src/main/webapp/ownerPetTable.html
+++ b/src/main/webapp/ownerPetTable.html
@@ -44,8 +44,8 @@
                 <th>Race</th>
                 <th>Size</th>
                 <th>Sex</th>
+                <th>Picture</th>
                 <th>Update</th>
-                <th>Modify</th>
                 <th>Case</th>
             </tr>
 
