--- a/src/main/webapp/Cases.html
+++ b/src/main/webapp/Cases.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="Css/FormOfficer.css">
+    <link rel="stylesheet" href="css/FormOfficer.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
@@ -47,11 +47,13 @@
             <br>
             <select name="selectTypes" id="selectTipos" class="form-selec" required>
                 <option class="form-option"></option>
-                <option class="form-option">ejemplo</option>
+                <option value="Stole" class="form-option">Stole</option>
+                <option value="Lost" class="form-option">Lost</option>
+                <option value="Death" class="form-option">Death</option>
             </select></label>
         <h2 class ="Info">According to the type the data will be filtered</h2>
         <br>
-        <button type="button" class="btn btn-primary">
+        <button type="button" onclick="tableCases()" class="btn btn-primary">
             <i class="fas fa-search"></i>
     </form>
 </div>
@@ -62,16 +64,14 @@
         <tr>
             <th>Case </th>
             <th>Type</th>
+            <th>Description</th>
+            <th>Created at</th>
 
 
         </tr>
         </thead>
         <tbody id="res">
         <tr>
-            <td>ggg</td>
-            <td>hdhdhhd</td>
-
-
         </tr>
         </tbody>
     </table>
@@ -88,7 +88,8 @@
     }
 </script>
 
-<script src="js/formTable.js"></script>
+<script src="Js/formTable.js"></script>
+<script src="Js/tableByLocation.js"></script>
 
 </body>
 
