--- a/src/main/webapp/TotalPets.html
+++ b/src/main/webapp/TotalPets.html
@@ -7,13 +7,8 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <link rel="stylesheet" href="Css/FormOfficer.css">
+  <link rel="stylesheet" href="css/FormOfficer.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script type="text/javascript" src="js/rangeDate.js"></script>
   <title>Pets Table</title>
 </head>
 
@@ -48,18 +43,22 @@
 
       <select name="selectLocalidad" id="selectLocalidad" class="form-selec" required>
         <option class="form-option"></option>
-        <option class="form-option">ejemplo</option>
+        <option id="Specie" value="Specie" class="form-option">Specie</option>
+        <option value="Race" class="form-option">Race</option>
+        <option value="Size" class="form-option">Size</option>
+        <option value="Sex" class="form-option">Sex</option>
+        <option value="Sterilized" class="form-option">sterilized</option>
       </select>
       <br>
       <label for="selectType" class="form-label">Selecciona Tipo de visita:
         <br>
         <select name="selectype" id="selectType" class="form-selec" required>
           <option class="form-option"></option>
-          <option class="form-option">ejemplo</option>
+
         </select></label>
     <h2 class ="Info">According to the selection the data will be filtered</h2>
     <br>
-    <button type="button" class="btn btn-primary">
+    <button onclick="tablePets()" type="button" class="btn btn-primary">
       <i class="fas fa-search"></i></button>
   </form>
 </div>
@@ -69,39 +68,107 @@
     <thead>
     <tr>
 
-      <th>especie </th>
-      <th>especie</th>
-      <th>raza</th>
-      <th>tamaño</th>
-      <th>sexo</th>
+      <th>Id </th>
+      <th>Specie</th>
+      <th>Race</th>
+      <th>Size</th>
+      <th>sex</th>
       <th>Microchip</th>
-      <th>Esterilizados</th>
-
+      <th>sterilized</th>
     </tr>
     </thead>
     <tbody id="res">
     <tr>
-      <td>ggg</td>
-      <td>hdhdhhd</td>
-      <td> dhdhhd</td>
-
     </tr>
     </tbody>
   </table>
 </div>
 <script>
 
-  document.getElementById("visit").onchange = function() {
-    if (this.value == 'micro') {
-      var optionID=document.getElementById('microchip');
-      alert(optionID.value);
-      document.getElementById("size").disabled = false;
-    }else
-      document.getElementById("size").disabled = true;
+  document.getElementById("selectLocalidad").onchange = function() {
+    var xhr = new XMLHttpRequest();
+    if (this.value == 'Specie') {
+      xhr.onreadystatechange = function () {
+        if (xhr.readyState == 4) {
+          var data = JSON.parse(xhr.responseText);
+          var cont = ""
+          var tbodyRef = document.getElementById("selectType")
+          tbodyRef.innerHTML = ""
+
+          for (let i = 0; i < data.length; i++) {
+            tbodyRef.innerHTML += `
+                <option value="${data[i].specie}">${data[i].specie}</option>
+                `
+          }
+
+        }
+      }
+      xhr.open('GET', 'http://localhost:8080/Final_proyect_prog-1.0-SNAPSHOT/api/userApp/owners/pets/filter/species', true);
+      xhr.send(null)
+    }else if(this.value == 'Race'){
+      xhr.onreadystatechange = function () {
+        if (xhr.readyState == 4) {
+          var data = JSON.parse(xhr.responseText);
+          var cont = ""
+          var tbodyRef = document.getElementById("selectType")
+          tbodyRef.innerHTML = ""
+
+          for (let i = 0; i < data.length; i++) {
+            tbodyRef.innerHTML += `
+                <option value="${data[i].race}">${data[i].race}</option>
+                `
+          }
+
+        }
+      }
+      xhr.open('GET', 'http://localhost:8080/Final_proyect_prog-1.0-SNAPSHOT/api/userApp/owners/pets/filter/race', true);
+      xhr.send(null)
+
+    }else if(this.value == 'Size'){
+      xhr.onreadystatechange = function () {
+        if (xhr.readyState == 4) {
+          var data = JSON.parse(xhr.responseText);
+          var cont = ""
+          var tbodyRef = document.getElementById("selectType")
+          tbodyRef.innerHTML = ""
+
+          for (let i = 0; i < data.length; i++) {
+            tbodyRef.innerHTML += `
+                <option value="${data[i].size}">${data[i].size}</option>
+                `
+          }
+
+        }
+      }
+      xhr.open('GET', 'http://localhost:8080/Final_proyect_prog-1.0-SNAPSHOT/api/userApp/owners/pets/filter/size', true);
+      xhr.send(null)
+    }else if(this.value == 'Sex'){
+      xhr.onreadystatechange = function () {
+        if (xhr.readyState == 4) {
+          var data = JSON.parse(xhr.responseText);
+          var cont = ""
+          var tbodyRef = document.getElementById("selectType")
+          tbodyRef.innerHTML = ""
+
+          for (let i = 0; i < data.length; i++) {
+            tbodyRef.innerHTML += `
+                <option value="${data[i].sex}">${data[i].sex}</option>
+                `
+          }
+
+        }
+      }
+      xhr.open('GET', 'http://localhost:8080/Final_proyect_prog-1.0-SNAPSHOT/api/userApp/owners/pets/filter/sex', true);
+      xhr.send(null)
+
+    }
+
+
   }
 </script>
 
-<script src="js/formTable.js"></script>
+<script src="Js/formTable.js"></script>
+<script src="Js/tableByLocation.js"></script>
 
 </body>
 
