--- a/src/main/webapp/Table.html
+++ b/src/main/webapp/Table.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="shortcut icon" href="https://i.ibb.co/ckDdYBB/Ciudadados-de-4-Patas.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/FormOfficer.css">
@@ -25,8 +25,11 @@
     <img class="logo" src="https://i.ibb.co/ckDdYBB/Ciudadados-de-4-Patas.png" alt="logo">
     <nav>
         <ul class="nav_links">
-            <li><a href="funtionOfficer.html">Home</a></li>
-
+            <li><a href="funtionOfficial.html">Home</a></li>
+            <li><a href="visualizeOwner.html">Table Users</a></li>
+            <li><a href="allPets.html">Filter Pets</a></li>
+            <li><a href="cases.html">Table Cases</a></li>
+            <li><a href="visitsOfficial.html">Table Visit</a></li>
         </ul>
     </nav>
     <a class= "cta" href="contact.html"><button>Contact</button></a>
@@ -39,42 +42,16 @@
 
 </nav>
 
-<div class="container">
-    <form action="" class="form">
-        <h1 class="title">Types of Visits</h1>
-        <label for="filtrar" class="label"></label>
-        <label for="selectType" class="form-label">Selecciona Opcion a filtrar:
-            <br>
-            <select name="selectvet" id="selectVisits" class="form-selec" required>
-                <option class="form-option"></option>
-                <option class="form-option">ejemplo</option>
-            </select>
-            <br>
-            <label for="selectType" class="form-label">Selecciona el dato por el cual vas a filtrar:
-                <br>
-                <select name="selectype" id="selectType" class="form-selec" required>
-
-                </select></label>
-            <h2 class ="Info">According to the type the data will be filtered</h2>
-            <br>
-            <button type="button" class="btn btn-primary">
-                <i class="fas fa-search"></i>
-            </button>
-    </form>
-</div>
-
 <div class="table-container" id="table-container">
-    <table class="table table-primary table-striped">
+    <table class="table">
         <thead>
         <tr>
-           <th>identificación</th>
-            <th>microchip</th>
-            <th>nombre</th>
-            <th>especie</th>
-            <th>raza</th>
-            <th>tamaño</th>
-            <th>sexo</th>
-
+           <th>Specie</th>
+            <th>Race</th>
+            <th>Size</th>
+            <th>Sex</th>
+            <th>Microchip</th>
+            <th>Sterilized</th>
         </tr>
         </thead>
         <tbody id="res">
