--- a/src/main/webapp/visitsOfficial.html
+++ b/src/main/webapp/visitsOfficial.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="shortcut icon" href="https://i.ibb.co/ckDdYBB/Ciudadados-de-4-Patas.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/FormOfficer.css">
+    <link rel="stylesheet" href="css/allPets.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
@@ -25,8 +25,11 @@
     <img class="logo" src="https://i.ibb.co/ckDdYBB/Ciudadados-de-4-Patas.png" alt="logo">
     <nav>
         <ul class="nav_links">
-            <li><a href="funtionOfficer.html">Home</a></li>
-
+            <li><a href="funtionOfficial.html">Home</a></li>
+            <li><a href="visitsOfficial.html">Table Owner</a></li>
+            <li><a href="allPets.html">Filter Pets</a></li>
+            <li><a href="cases.html">Table Cases</a></li>
+            <li><a href="table.html">All Pets</a></li>
         </ul>
     </nav>
     <a class= "cta" href="contact.html"><button>Contact</button></a>
@@ -40,47 +43,48 @@
 </nav>
 
 <div class="container">
-    <form action="" class="form">
-        <h1 class="title">Types of Visits</h1>
-        <label for="filtrar" class="label"></label>
-        <label for="selectVisits" class="form-label">Selecciona Veterinaria:
-            <br>
-            <select name="selectvet" id="selectVisits" class="form-selec" required>
-                <option class="form-option"></option>
-                <option class="form-option">ejemplo</option>
-                </select>
-            <br>
-            <label for="selectType" class="form-label">Selecciona Tipo de visita:
-                <br>
+  <form action="" class="form">
+      <h1 class="title">All visits filter to vet and type:</h1>
+      <label for="">Select vet to filter</label> 
+      <label for="" class="form-label">Select type visit:</label>
+      <div class="input-group">
+        <div class="sele">
+          <select name="selectvet" id="selectVisits" class="form-selec" required>
+            <option class="form-option">example</option>
+          </select>
+        </div>
+        
+          <div class="type">
             <select name="selectype" id="selectType" class="form-selec" required>
-                <option class="form-option"></option>
-                <option class="form-option">ejemplo</option>
-            </select></label>
-        <h2 class ="Info">According to the type the data will be filtered</h2>
-        <br>
-            <button type="button" class="btn btn-primary">
-                <i class="fas fa-search"></i>
-                </button>
-    </form>
+                <option value="saab">Sterilization</option>
+                <option value="micro" id="microchip">Microchip implantation</option>
+                <option value="audi" id="vac">Vaccination</option>
+                <option value="audi" id="dew">Deworming</option>
+                <option value="audi">Urgency</option>
+                <option value="audi">Control</option>   
+            </select>
+            <button onclick="" type="button" class="btn btn-primary">
+              <i class="fas fa-search"></i>
+            </button>
+        </div>
+        </div>
+</form>
 </div>
 
 <div class="table-container" id="table-container">
-    <table class="table table-primary table-striped">
+    <table class="table">
         <thead>
         <tr>
-            <th>Visit # </th>
+            <th>Visit</th>
             <th>Vet</th>
             <th>Type</th>
-
-
         </tr>
         </thead>
         <tbody id="res">
         <tr>
             <td>ggg</td>
             <td>hdhdhhd</td>
-
-
+            <td>hdhdhhd</td>
         </tr>
         </tbody>
     </table>
