frontend official ready

--- a/src/main/webapp/Table.html
+++ b/src/main/webapp/Table.html
@@ -26,7 +26,7 @@
     <nav>
         <ul class="nav_links">
             <li><a href="funtionOfficial.html">Home</a></li>
-            <li><a href="visualizeOwner.html">Table Users</a></li>
+            <li><a href="visualizeOwner.html">Table Owner</a></li>
             <li><a href="allPets.html">Filter Pets</a></li>
             <li><a href="cases.html">Table Cases</a></li>
             <li><a href="visitsOfficial.html">Table Visit</a></li>
