--- a/src/main/webapp/allVisitsVet.html
+++ b/src/main/webapp/allVisitsVet.html
@@ -48,13 +48,13 @@
 
 <div class="container">
     <form action="" class="form">
-        <h1 class="title" id="h1Vet"></h1>
-        <label for="">Selecciona nombre de la mascota:</label>
-        <label for="" class="form-label">Selecciona el rango de fechas: </label>
+        <h1 class="title" id="h1Vet">All visits of:</h1>
+        <label for="">Select name of pet:</label>
+        <label for="" class="form-label">Select range date: </label>
         <div class="input-group">
             <div class="sele">
                 <select name="petsVet" id="selecPets">
-                    <option value=""></option>
+        
                 </select>
             </div>
             <div class="date">
