--- a/src/main/webapp/cases.html
+++ b/src/main/webapp/cases.html
@@ -54,7 +54,7 @@
 </div>
 
 <div class="table-container" id="table-container">
-    <table class="table table-primary table-striped">
+    <table class="table">
         <thead>
         <tr>
             <th>Case </th>
