--- a/src/main/webapp/ownerPetTable.html
+++ b/src/main/webapp/ownerPetTable.html
@@ -34,7 +34,7 @@
 
     </nav>
     <div id="table-container">
-        <table class="table table-primary table-striped">
+        <table class="table">
             <thead>
             <tr>
                 <th>ID</th>
