--- a/src/main/webapp/visitPetVet.html
+++ b/src/main/webapp/visitPetVet.html
@@ -41,7 +41,7 @@
 
 </nav>
 <div class="table-container" id="table-container">
-    <table class="table table-primary table-striped">
+    <table class="table">
         <thead>
         <tr>
             <th>ID</th>
