--- a/src/main/webapp/visualizeOwner.html
+++ b/src/main/webapp/visualizeOwner.html
@@ -9,10 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="css/FormOfficer.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script type="text/javascript" src="js/rangeDate.js"></script>
   <title>Pets Table</title>
 </head>
@@ -49,8 +45,7 @@
     <div>
       <label for="">Select location to filter</label>
     <select name="selectLocalidad" id="selectLocalidad" class="form-selec" required>
-      <option class="form-option"></option>
-      <option class="form-option">ejemplo</option>
+    
     </select>
     <button type="button" onclick="tableLocation()" class="btn btn-primary">
       <i class="fas fa-search"></i>
@@ -60,7 +55,7 @@
 </div>
 
 <div class="table-container" id="table-container">
-  <table class="table table-primary table-striped">
+  <table class="table">
     <thead>
     <tr>
       <th>ID </th>
